nohup.out
  File "server.py", line 49
    def main:
            ^
SyntaxError: invalid syntax
[I 200421 22:32:19 web:2106] 200 GET / (127.0.0.1) 1.43ms
[W 200421 22:32:19 web:2106] 404 GET /favicon.ico (127.0.0.1) 0.34ms
[I 200421 22:32:22 web:2106] 304 GET /tagFileCount (127.0.0.1) 0.36ms
[E 200421 22:32:34 web:1621] Uncaught exception GET /showFile?message=chtb_0001.xml (127.0.0.1)
    HTTPServerRequest(protocol='http', host='localhost:8000', method='GET', uri='/showFile?message=chtb_0001.xml', version='HTTP/1.1', remote_ip='127.0.0.1')
    Traceback (most recent call last):
      File "/home/drenight/anaconda3/lib/python3.6/site-packages/tornado/web.py", line 1541, in _execute
        result = method(*self.path_args, **self.path_kwargs)
      File "server.py", line 37, in get
        f=open(dataPath,'r')
    FileNotFoundError: [Errno 2] No such file or directory: '/home/drenight/2020up/bysjchtb_0001.xml'
[E 200421 22:32:34 web:2106] 500 GET /showFile?message=chtb_0001.xml (127.0.0.1) 26.41ms
[I 200421 22:32:42 web:2106] 200 GET /showFile?message=%2Fdata%2Fchtb_0001.xml (127.0.0.1) 0.80ms
[I 200421 22:34:09 web:2106] 200 GET / (127.0.0.1) 1.37ms
[I 200421 22:34:17 web:2106] 304 GET /showFile?message=%2Fdata%2Fchtb_0001.xml (127.0.0.1) 0.77ms
[E 200421 22:34:18 web:1621] Uncaught exception GET /buildTree (127.0.0.1)
    HTTPServerRequest(protocol='http', host='localhost:8000', method='GET', uri='/buildTree', version='HTTP/1.1', remote_ip='127.0.0.1')
    Traceback (most recent call last):
      File "/home/drenight/anaconda3/lib/python3.6/site-packages/tornado/web.py", line 1541, in _execute
        result = method(*self.path_args, **self.path_kwargs)
      File "server.py", line 42, in get
        f=open(fileShowed,r)
    NameError: name 'r' is not defined
[E 200421 22:34:18 web:2106] 500 GET /buildTree (127.0.0.1) 0.96ms
